# UDS

./: .clang-format  .gitignore  Architecture.md  CHANGELOG.md  CMakeLists.txt  HANDOFF.md  LICENSES.md  README.md  Roadmap.md  State.md  ToTest.md
.github/workflows/: ci.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Core/: AttackEnvelope.h  DelayAlgorithm.h  DelayBandNode.h  DelayMatrix.h  FilterSection.h  GenerativeModulator.h  LFOModulator.h  ModulationEngine.h  PresetManager.h  RoutingGraph.h  RoutingUndoManager.h  SafetyLimiter.h
Source/UI/: BandNodeComponent.h  BandParameterPanel.h  ExpressionSlider.h  ExpressionTrainDialog.h  LookAndFeel.h  MainComponent.h  NodeEditorCanvas.h  NodeVisual.h  PresetBrowserPanel.h  SafetyMuteOverlay.h  StandaloneMetronome.h  Typography.h
Tests/: CMakeLists.txt  DSPTests.cpp
